# multirat

./: .gitignore  .gitmodules  Dockerfile  README.md  README.rst  environment.yml  main.py  pyproject.toml  setup.py
mesh/: mesh_generation.py
multirat/: __init__.py  boundary.py  boundary_conditions.py  compartments.py  computers.py  config.py  diffusion.py  draft.py  expressions.py  fluid_transfer.py  initial_conditions.py  meshprocessing.py  mms.py  multicompartment.py  parameters.py  parameters_new.py  pressure.py  pressure_problem.py  problems.py  projectors.py  timekeeper.py  timeseriesstorage.py  utils.py
notebooks/: Convergence Plots.ipynb  Full Multicompartment with TracerODE.ipynb  Full-Fledged MultiCompartment.ipynb  Gmsh Tutorial.ipynb  H1-Projectors.ipynb  Local Region Amount Analysis.html  MMS Concentration.ipynb  MMS Pressure.ipynb  MMS Test.ipynb  MMS.ipynb  Manufactured Solutions.ipynb  Marking Boundary Subdomains.ipynb  MeshInformation.ipynb  MultiComp Full 2 .ipynb  MultiCompartment.ipynb  Multicomp Draft.ipynb  Parameter Estimation.ipynb  Parameters.ipynb  Simulation Notebook.ipynb  SurfaceTagging.ipynb  TimeSeriesVisualization.ipynb  Timekeeper.ipynb  Ulfy and Degree of Placeholder.ipynb  Ulfy.ipynb  Untitled (solus's conflicted copy 2022-11-21).ipynb  Untitled.ipynb  Visualization and Measurements.ipynb  pyvista.ipynb
scripts/: mms-pressure.py  mms-solute.py  mms_pressure.py  mms_solute.py  run-simulations.py  run_multicompartment.py  run_simulations.py
test/: test_flux_computations.py  test_parameters.py  test_solver.py
(+8 files in other folders)
