[tool.poetry]
name = "multirat"
version = "0.1.0"
description = "Code for multi-compartment simulations of tracer clearance in the ratbrain."
authors = ["jorgenriseth <jnriseth@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
meshio = "^5.3.4"
SVMTK = { path = "./deps/SVMTK", develop = false }
pantarei = { path = "./deps/pantarei", develop = true }


[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
