[tool.poetry]
name = "multirat"
version = "0.1.0"
description = ""
authors = ["jorgenriseth <jnriseth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pantarei = { git="https://github.com/jorgenriseth/pantarei.git", develop=true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
